update error and main page

--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -1,5 +1,13 @@
 body
-	background: #FFF
-	+css-lock(16, 50, 600, 1000)
-	line-height: 1.4
+	min-width: 320px
+	color: $dark
+	background: $white
+	font-family: $book
+	+f(16px, 400, 1.25)
 
+.out
+	+clr
+
+.main
+	overflow: auto
+	height: 100vh
