--- a/src/sass/helpers/_mixins.sass
+++ b/src/sass/helpers/_mixins.sass
@@ -38,6 +38,12 @@
   .no-touch &:hover
     @content
 
+=active
+  .no-touch &:active
+    @content
+  &:active
+    @content 
+    
 %pseudo
   position: relative
   &:before,&:after
