--- a/src/templates/layouts/_layout.html
+++ b/src/templates/layouts/_layout.html
@@ -15,7 +15,10 @@
 
     <!-- BEGIN content -->
     <div class="out">
-      {% block content %}{% endblock %}
+      {% include 'partials/components/_header.html' %}
+      <div class="main">
+        {% block content %}{% endblock %}
+      </div>
     </div>
     <!-- END content -->
 
