--- a/src/sass/helpers/_reset.sass
+++ b/src/sass/helpers/_reset.sass
@@ -46,6 +46,9 @@ html
 *, *:before, *:after
     box-sizing: inherit
 
+a 
+    text-decoration: none
+
 @media (prefers-reduced-motion: reduce)
     *
         transition: none !important
