--- a/src/sass/components/_cover.sass
+++ b/src/sass/components/_cover.sass
@@ -14,3 +14,9 @@
 		font-family: $book
 		+f(25px, 400, 1.2)
 		text-align: center
+		+sm 
+			padding: 36px 47px
+			margin: 0
+			max-width: none
+			background: rgba($black, 0.7)
+			+f(13px, null, 1.538)
