--- a/src/sass/components/_btn.sass
+++ b/src/sass/components/_btn.sass
@@ -26,3 +26,29 @@
 			background: darken(#D5D5D5, 3%)
 	&_wide
 		width: 100%
+
+.btn-prev
+	color: $white
+	font-family: $futura
+	font-size: 0
+	line-height: 38px
+	border-color: transparent
+	vertical-align: top
+	display: inline-block 
+	&__text
+		+f(20px, 500)
+		vertical-align: middle
+		display: inline-block
+	&__icon
+		margin-right: 10px 
+		width: 38px
+		height: 38px
+		line-height: 38px
+		text-align: center
+		border-radius: 50% 
+		background-color: $blue 
+		vertical-align: top
+		display: inline-block
+		.icon
+			font-size: 15px
+			vertical-align: middle
