--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -1,5 +1,5 @@
-// done by riverco.de
 @import helpers/all
 @import generated/sprite-svg
+@import ./node_modules/perfect-scrollbar/css/perfect-scrollbar
 @import common
 @import components/index
