--- a/src/sass/components/_btn.sass
+++ b/src/sass/components/_btn.sass
@@ -26,6 +26,9 @@
 			background: darken(#D5D5D5, 3%)
 	&_wide
 		width: 100%
+	&_lg
+		padding: 16px 20px 
+		font-size: 20px
 
 .btn-prev
 	color: $white
