--- a/src/sass/components/_scrollBar.sass
+++ b/src/sass/components/_scrollBar.sass
@@ -1,7 +1,7 @@
 .ps
-	position: relative
 	.ps__rail-x,
 	.ps__rail-y
+		z-index: 1
 		height: 8px
 		background-color: transparent 
 	.ps__rail-x:focus>.ps__thumb-x, .ps__rail-x:hover>.ps__thumb-x
