--- a/src/templates/apartments.html
+++ b/src/templates/apartments.html
@@ -6,7 +6,7 @@ title: Apartments
 {% block content %}
 	
 	<!-- begin apartment -->
-	<div class="apartment">
+	<div class="apartment js-scroll-wrap">
 		<div class="apartment__hero hero" style="background-image: url(./img/apartment-hero.jpg);">
 			<div class="hero__inner">
 				<div class="hero__prev">
@@ -37,54 +37,56 @@ title: Apartments
 				</div>
 				<div class="apartment__right">
 					<h2 class="apartment__title-md title-md">От <span class="text-green">20 000 ₽</span> за сутки</h2>
-					<button class="apartment__btn btn btn_green btn_wide">Забронировать</button>
+					<button class="apartment__btn btn btn_lg btn_green btn_wide">Забронировать</button>
 				</div>
 			</div>
 			<div class="apartment__field">
 				<div class="apartment__left">
-					<div class="apartment__row">
-						<div class="apartment__col">
-							<h4 class="apartment__title-xs title-xs">Вместимость</h4>
-							<ul class="apartment__list">
-								<li class="apartment__item">-2 взрослых</li>
-							</ul>
+					<div class="apartment__out">
+						<div class="apartment__row">
+							<div class="apartment__col">
+								<h4 class="apartment__title-xs title-xs">Вместимость</h4>
+								<ul class="apartment__list">
+									<li class="apartment__item">-2 взрослых</li>
+								</ul>
+							</div>
+							<div class="apartment__col">
+								<h4 class="apartment__title-xs title-xs">Мультимедиа</h4>
+								<ul class="apartment__list">
+									<li class="apartment__item">-Label</li>
+									<li class="apartment__item">-Label</li>
+								</ul>
+							</div>
+							<div class="apartment__col">
+								<h4 class="apartment__title-xs title-xs">Общая инфо.</h4>
+								<ul class="apartment__list">
+									<li class="apartment__item">-Label</li>
+									<li class="apartment__item">-Label</li>
+								</ul>
+							</div>
 						</div>
-						<div class="apartment__col">
-							<h4 class="apartment__title-xs title-xs">Мультимедиа</h4>
-							<ul class="apartment__list">
-								<li class="apartment__item">-Label</li>
-								<li class="apartment__item">-Label</li>
-							</ul>
-						</div>
-						<div class="apartment__col">
-							<h4 class="apartment__title-xs title-xs">Общая инфо.</h4>
-							<ul class="apartment__list">
-								<li class="apartment__item">-Label</li>
-								<li class="apartment__item">-Label</li>
-							</ul>
-						</div>
-					</div>
-					<div class="apartment__row">
-						<div class="apartment__col">
-							<h4 class="apartment__title-xs title-xs">Кровать</h4>
-							<ul class="apartment__list">
-								<li class="apartment__item">-Label</li>
-								<li class="apartment__item">-Label</li>
-							</ul>
-						</div>
-						<div class="apartment__col">
-							<h4 class="apartment__title-xs title-xs">Доступ в интернет</h4>
-							<ul class="apartment__list">
-								<li class="apartment__item">-Label</li>
-								<li class="apartment__item">-Label</li>
-							</ul>
-						</div>
-						<div class="apartment__col">
-							<h4 class="apartment__title-xs title-xs">Заезд/Выезд</h4>
-							<ul class="apartment__list">
-								<li class="apartment__item">-Label</li>
-								<li class="apartment__item">-Label</li>
-							</ul>
+						<div class="apartment__row">
+							<div class="apartment__col">
+								<h4 class="apartment__title-xs title-xs">Кровать</h4>
+								<ul class="apartment__list">
+									<li class="apartment__item">-Label</li>
+									<li class="apartment__item">-Label</li>
+								</ul>
+							</div>
+							<div class="apartment__col">
+								<h4 class="apartment__title-xs title-xs">Доступ в интернет</h4>
+								<ul class="apartment__list">
+									<li class="apartment__item">-Label</li>
+									<li class="apartment__item">-Label</li>
+								</ul>
+							</div>
+							<div class="apartment__col">
+								<h4 class="apartment__title-xs title-xs">Заезд/Выезд</h4>
+								<ul class="apartment__list">
+									<li class="apartment__item">-Label</li>
+									<li class="apartment__item">-Label</li>
+								</ul>
+							</div>
 						</div>
 					</div>
 				</div>
