--- a/src/sass/components/_apartment.sass
+++ b/src/sass/components/_apartment.sass
@@ -17,10 +17,14 @@
 	&__left
 		padding-right: 80px
 		flex-grow: 1
+		+xl
+			padding-right: 20px
 	&__right
 		flex: 0 0 262px 
 	&__out
 		width: 91%
+		+xl
+			width: 100%
 	&__title
 		margin-bottom: 25px
 	&__title-md
