--- a/src/sass/components/_scrollBar.sass
+++ b/src/sass/components/_scrollBar.sass
@@ -10,6 +10,8 @@
 	.ps__thumb-x
 		border-radius: 4px
 		background-color: rgba($white, 0.5)
+	.ps__thumb-x
+		height: 4px
 		&:before
 			position: absolute 
 			content: "" 
@@ -17,8 +19,6 @@
 			left: 0px
 			right: 0px
 			bottom: -2px
-	.ps__thumb-x
-		height: 4px
 	.ps__rail-x:focus>.ps__thumb-x, .ps__rail-x:hover>.ps__thumb-x
 		height: 4px
 	.ps__rail-x:focus>.ps__thumb-x, .ps__rail-x:hover>.ps__thumb-x,
@@ -27,6 +27,13 @@
 		background-color: $white 
 	.ps__thumb-y
 		width: 4px
+		&:before
+			position: absolute 
+			content: "" 
+			top: 0
+			left: -2px
+			right: -2px
+			bottom: 0
 	.ps__rail-y:focus>.ps__thumb-y, .ps__rail-y:hover>.ps__thumb-y
 		width: 4px
 .ps--focus>.ps__rail-x, .ps--focus>.ps__rail-y, .ps--scrolling-x>.ps__rail-x, .ps--scrolling-y>.ps__rail-y, .ps:hover>.ps__rail-x, .ps:hover>.ps__rail-y
