--- a/src/sass/helpers/_helpers.sass
+++ b/src/sass/helpers/_helpers.sass
@@ -20,6 +20,14 @@
 =gpu
   transform: translate3d(0,0,0)
 
+=xl
+  +r(1365)
+    @content
+  
+=lg
+  +r(1259)
+    @content
+
 =md
   +r(1023)
     @content
