--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -1,4 +1,5 @@
 .header
+	position: relative
 	float: left
 	overflow: auto
 	width: 274px
@@ -16,7 +17,7 @@
 		right: 0
 		z-index: 100
 		float: none
-		overflow: visible
+		overflow: visible !important
 		width: auto
 		min-width: 320px
 		height: 100px
