--- a/src/templates/choice.html
+++ b/src/templates/choice.html
@@ -5,7 +5,7 @@ title: Choice
 
 {% block content %}
 	
-	<div class="items">
+	<div class="items white-scrollbar js-scroll-wrap">
 		<div class="items__content">
 			{% for item in [
 				{ title: 'Апартаменты с 1 спальней' },
@@ -22,14 +22,16 @@ title: Choice
 							</button>
 							<div class="item__title">{{item.title}}</div>
 							<div class="item__content js-item-content">
-								<div class="item__slider">
-									{% for item in range(0,5) %}
-										<div class="item__slide">
-											<div class="item__slide-in" style="background-image: url(https://placecage.com/182/111);"></div>
-										</div>
-									{% endfor %}
+								<div class="item__slider white-scrollbar js-scroll-wrap">
+									<div class="item__slider-in">
+										{% for item in range(0,5) %}
+											<div class="item__slide js-item-slide">
+												<div class="item__slide-in" style="background-image: url(https://placecage.com/182/111);"></div>
+											</div>
+										{% endfor %}
+									</div>
 								</div>
-								<div class="item__description">
+								<div class="item__description item__element js-item-element">
 									<p>Many people sign up for affiliate programs with the hopes of making some serious money.</p>
 									<p>They advertise a few places and then wait for the money to start pouring in. When it doesn’t, they blame it on the program and quit.</p>
 									<br>
@@ -41,10 +43,10 @@ title: Choice
 									<br>
 									<p>Make a commitment to your new plan and don’t get involved in any other programs until your current programs are making you money consistently. Don’t give up. Sticking with this plan will significantly improve your success. Remember, Advertise, Advertise, Advertise.</p>
 								</div>
-								<div class="item__price">От <span>20 000 ₽</span> за сутки</div>
+								<div class="item__price item__element js-item-element">От <span>20 000 ₽</span> за сутки</div>
 								<div class="item__btns">
-									<button class="btn btn_gray btn_wide item__btn">Подробнее</button>
-									<button class="btn btn_green btn_wide item__btn">Забронировать</button>
+									<button class="btn btn_gray btn_wide item__btn item__element js-item-element">Подробнее</button>
+									<button class="btn btn_green btn_wide item__btn item__element js-item-element">Забронировать</button>
 								</div>
 							</div>
 						</div>
