--- a/src/templates/partials/components/_header.html
+++ b/src/templates/partials/components/_header.html
@@ -1,5 +1,5 @@
 <!-- begin header -->
-<header class="header">
+<header class="header js-scroll-wrap">
 	<div class="header__top">
 		<button class="btn-nav js-nav-control">
 			<span class="btn-nav__inner"></span>
