--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -10,7 +10,7 @@
 	font-family: $book
 	font-weight: 400
 	text-align: center
-	+md 
+	+lg 
 		position: absolute
 		top: 0
 		left: 0
@@ -20,17 +20,16 @@
 		overflow: visible !important
 		width: auto
 		min-width: 320px
-		height: 100px
-	+sm 
 		height: 50px
+	+sm 
 		box-shadow: 0 11px 16px 0 rgba($black,0.35)
 	&__top
-		+md 
+		+lg 
 			position: relative
 			z-index: 20
 			background: $dark
 	&__body 
-		+md 
+		+lg 
 			position: absolute
 			left: 0
 			right: 0
@@ -43,16 +42,16 @@
 		+sm 
 			padding-top: 50px
 		&.is-open
-			+md 
+			+lg 
 				transform: translate3d(0,100%,0)
 	&__content
-		+md 
+		+lg 
 			overflow: auto
 			height: 100%
 	&__order
 		padding: 40px 47px
 		border-top: 1px solid rgba($white, 0.2)
-		+md 
+		+lg 
 			padding: 20px 8px
 			margin: 0 auto
 			border-bottom: 1px solid rgba($white, 0.2)
@@ -60,7 +59,7 @@
 	&__contacts
 		padding-bottom: 20px
 		+f(16px, null, 1)
-		+md 
+		+lg 
 			padding: 37px 20px 25px
 			margin: 0 auto
 			max-width: 203px
@@ -77,7 +76,7 @@
 	&__address
 		padding: 0 30px 30px
 		+f(16px, null, 1.375)
-		+md 
+		+lg 
 			padding: 0 20px 25px
 			margin: 0 auto
 			max-width: 203px
@@ -86,7 +85,7 @@
 		padding: 0 25px 30px
 		color: #9393A5
 		+f(14px, null, 1.286)
-		+md
+		+lg
 			padding: 0 20px 30px
 			margin: 0 auto
 			max-width: 242px
@@ -98,9 +97,9 @@
 	left: 0
 	display: none
 	width: 84px
-	height: 100px
+	height: 50px
 	background: none
-	+md 
+	+lg 
 		display: block
 	+sm 
 		width: 42px
@@ -123,7 +122,7 @@
 		position: absolute
 		left: 50%
 		margin-left: -12px
-		border-radius: 2.5px
+		border-radius: 2px
 		width: 24px
 		height: 2px
 		background: $white
@@ -137,17 +136,17 @@
 		content: ''
 		transition: transform 0.3s
 	&:before
-		top: 39px
+		top: 16px
 		transform-origin: left top
 		+sm 
 			top: 19px
 	&:after
-		top: 55px
+		top: 32px
 		transform-origin: left bottom
 		+sm 
 			top: 27px
 	&__inner
-		top: 47px
+		top: 24px
 		transition: opacity 0.3s, transform 0.3s
 		+sm 
 			top: 23px
@@ -155,10 +154,10 @@
 .logo 
 	display: block
 	padding: 31px 62px
-	+md 
-		padding: 26px 40px
+	+lg 
+		padding: 11px 40px
 		margin: 0 auto
-		max-width: 200px
+		max-width: 150px
 	+sm 
 		padding: 13px 20px
 		max-width: 100px
@@ -169,7 +168,7 @@
 .lang
 	border-top: 1px solid rgba($white, 0.2)
 	border-bottom: 1px solid rgba($white, 0.2)
-	+md 
+	+lg 
 		position: absolute
 		top: 0
 		right: 25px
@@ -185,9 +184,9 @@
 		+f(16px, null, 1)
 		text-transform: uppercase
 		transition: opacity 0.3s
-		+md 
-			padding: 38px 5px 36px
-			+f(26px)
+		+lg 
+			padding: 18px 5px
+			+f(14px)
 		+sm 
 			padding: 19px 3px 18px
 			+f(13px)
@@ -196,7 +195,7 @@
 
 .nav
 	padding: 20px 0
-	+md 
+	+lg 
 		padding: 17px 0 10px
 	&__link
 		position: relative
@@ -206,7 +205,7 @@
 		opacity: 0.44
 		+f(16px, null, 1)
 		transition: opacity 0.3s
-		+md 
+		+lg 
 			padding: 15px
 			+f(15px)
 		+hover
@@ -236,7 +235,7 @@
 		padding: 20px 40px
 		color: $blue
 		+f(16px, null, 1.5)
-		+md 
+		+lg 
 			padding: 15px 20px
 			margin: 0 auto
 			max-width: 210px
