--- a/src/templates/apartments.html
+++ b/src/templates/apartments.html
@@ -6,7 +6,7 @@ title: Apartments
 {% block content %}
 	
 	<!-- begin apartment -->
-	<div class="apartment js-scroll-wrap">
+	<div class="apartment">
 		<div class="apartment__hero hero" style="background-image: url(./img/apartment-hero.jpg);">
 			<div class="hero__inner">
 				<div class="hero__prev">
