--- a/src/templates/layouts/_layout.html
+++ b/src/templates/layouts/_layout.html
@@ -16,7 +16,7 @@
     <!-- BEGIN content -->
     <div class="out">
       {% include 'partials/components/_header.html' %}
-      <div class="main">
+      <div class="main js-scroll-wrap">
         {% block content %}{% endblock %}
       </div>
     </div>
