--- a/src/templates/location.html
+++ b/src/templates/location.html
@@ -8,7 +8,7 @@ title: Location
 	<!-- begin location -->
 	<div class="location">
 		<div class="location__map"></div>
-		<div class="location__wrap js-scroll-wrap">
+		<div class="location__wrap">
 			<div class="location__hero">
 				<h2 class="location__title-lg title-lg">Расположение</h2>
 				<p>Many people sign up for affiliate programs with the hopes of making some serious money.</p>
