--- a/src/sass/components/_apartment.sass
+++ b/src/sass/components/_apartment.sass
@@ -1,8 +1,7 @@
 .apartment
 	position: relative
 	color: $white 
-	height: 100vh
-	overflow: auto
+	min-height: 100vh
 	background-color: $darckBg 
 	&__wrap
 		position: relative
