--- a/src/sass/components/_btn.sass
+++ b/src/sass/components/_btn.sass
@@ -29,7 +29,10 @@
 	&_lg
 		padding: 16px 20px 
 		font-size: 20px
-
+	&_table-md
+		+md 
+			padding: 10px 15px
+			+f(15px, null, 1.35)
 .btn-prev
 	color: $white
 	font-family: $futura
