--- a/src/templates/choice.html
+++ b/src/templates/choice.html
@@ -45,8 +45,8 @@ title: Choice
 								</div>
 								<div class="item__price item__element js-item-element">От <span>20 000 ₽</span> за сутки</div>
 								<div class="item__btns">
-									<button class="btn btn_gray btn_wide item__btn item__element js-item-element">Подробнее</button>
-									<button class="btn btn_green btn_wide item__btn item__element js-item-element">Забронировать</button>
+									<button class="btn btn_gray btn_wide btn_table-md item__btn item__element js-item-element">Подробнее</button>
+									<button class="btn btn_green btn_wide btn_table-md item__btn item__element js-item-element">Забронировать</button>
 								</div>
 							</div>
 						</div>
