--- a/src/sass/components/_btn.sass
+++ b/src/sass/components/_btn.sass
@@ -17,6 +17,13 @@
 			background: $lightGreen
 		+active
 			background: $darkGreen
+	&_blue
+		color: $white
+		background: $blue
+		+hover
+			background: lighten($blue, 3%)
+		+active
+			background: darken($blue, 3%)
 	&_gray
 		color: $white
 		background: #D5D5D5
