--- a/src/templates/layouts/_layout.html
+++ b/src/templates/layouts/_layout.html
@@ -15,7 +15,9 @@
 
     <!-- BEGIN content -->
     <div class="out">
-      {% include 'partials/components/_header.html' %}
+      {% if not noHeader %}
+        {% include 'partials/components/_header.html' %}
+      {% endif %}
       <div class="main js-scroll-wrap">
         {% block content %}{% endblock %}
       </div>
