--- a/src/sass/components/_apartment.sass
+++ b/src/sass/components/_apartment.sass
@@ -10,6 +10,7 @@
 		padding: 0 40px 80px
 	&__field
 		padding: 49px 0 39px
+		width: 100%
 		display: flex
 		&:not(:last-child)
 			border-bottom: 1px solid rgba($white, 0.1)
