--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -1,5 +1,6 @@
 @import helpers/all
 @import generated/sprite-svg
 @import ./node_modules/perfect-scrollbar/css/perfect-scrollbar
+@import ./node_modules/owl.carousel/dist/assets/owl.carousel
 @import common
 @import components/index
