--- a/src/templates/interiors.html
+++ b/src/templates/interiors.html
@@ -11,30 +11,42 @@ noHeader: true
 			<span class="btn-prev__icon">{{ mixins.icon('close') }}</span>
 			<span class="btn-prev__text">Вернуться на главную</span>
 		</a>
-		<div class="interiors__slider js-interiors-slideshow">
+		<button class="interiors__arrow interiors__prev interiors__scroll-to js-interiors-scroll-to" data-direction="prev">
+			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14.2 23.5" style="width: 0.604em; height: 1em;" class="interiors__icon"><path fill="currentColor" d="M13.7 3.2l-8.5 8.6 8.5 8.6c.7.7.7 1.9 0 2.6-.7.7-1.9.7-2.6 0L0 11.7 11.1.5c.7-.7 1.9-.7 2.6 0 .7.8.7 1.9 0 2.7z"/></svg>
+		</button>
+		<button class="interiors__arrow interiors__next interiors__scroll-to js-interiors-scroll-to" data-direction="next">
+			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14.2 23.5" style="width: 0.604em; height: 1em;" class="interiors__icon"><path fill="currentColor" d="M.5.5c.7-.7 1.9-.7 2.6 0l11.1 11.2L3.1 22.9c-.7.7-1.9.7-2.6 0-.7-.7-.7-1.9 0-2.6L9 11.7.5 3.1C-.2 2.4-.2 1.3.5.5z"/></svg>
+		</button>
+		<div class="interiors__slider white-scrollbar js-interiors-slideshow">
 			{% for item in range(0,20) %}
-				<div class="interiors__slide" style="background-image: url(img/interiors.jpg);" data-index="{{loop.index}}">
-					<div class="interiors__content">
-						<h2 class="title-lg interiors__title">Апартаменты с 1 спал</h2>
-						<div class="interiors__description">
-							<p>Many people sign up for affiliate programs with the hopes of making some serious money. I am convinced the only way to make money online is to have a consistent Advertising plan. A plan you are willing to work hard on and commit to for a selected period of time. When making this plan, you need to do two things.  First, you should pick a few affiliate programs that are of interest to you. Second, you need to decide how long you want to work these programs. Once you decide on a time period (I recommend 6 months to a year), you must make a promise to yourself that you will not stop advertising until that time period is up. This is perhaps the most important factor in your success.</p>
-							<p>Next, you need to consider your advertising options: traffic exchanges, classified ads, e-mail campaigns, ezine articles, posting to forums or message boards, chatting with others who are interested in what you have to offer, and posting flyers around your town. Now you see the many possible advertising avenues you can choose from. I recommend doing all of them. It may sound like a lot of work, but when broken down into a plan, it is not.</p>
-							<p>One possible plan may look like this: Traffic Exchanges-1 hour per day. Post 15 classified ads per day. Make 5 posts to a message board or forum per day. Submit an article once per week to an ezine. Visit chat rooms and distribute flyers as you have extra time during the week. This all can be accomplished by spending 2-3 hours per day. You will be surprised how much you get done when you have a plan. You may also choose whether you will work 5 or 6 days per week. Make a checklist for each day of the week, and mark each task off as you finish it. That will keep you on focus, and will make you feel good that you are one step closer to reaching your goal.</p>
-							<p>Make a commitment to your new plan and don’t get involved in any other programs until your current programs are making you money consistently. Don’t give up. Sticking with this plan will significantly improve your success. Remember, Advertise, Advertise, Advertise.</p>
-						</div>
-						<div class="interiors__btn">
-							<button class="btn btn_blue">Перейти к номеру</button>
+				<div class="interiors__slide" data-index="{{loop.index}}">
+					<div class="interiors__background" style="background-image: url(img/interiors.jpg);">
+						<div class="interiors__content">
+							<div class="interiors__text">
+								<h2 class="title-lg interiors__title">Апартаменты с 1 спал</h2>
+								<div class="interiors__description">
+									<p>Many people sign up for affiliate programs with the hopes of making some serious money. I am convinced the only way to make money online is to have a consistent Advertising plan. A plan you are willing to work hard on and commit to for a selected period of time. When making this plan, you need to do two things.  First, you should pick a few affiliate programs that are of interest to you. Second, you need to decide how long you want to work these programs. Once you decide on a time period (I recommend 6 months to a year), you must make a promise to yourself that you will not stop advertising until that time period is up. This is perhaps the most important factor in your success.</p>
+									<p>Next, you need to consider your advertising options: traffic exchanges, classified ads, e-mail campaigns, ezine articles, posting to forums or message boards, chatting with others who are interested in what you have to offer, and posting flyers around your town. Now you see the many possible advertising avenues you can choose from. I recommend doing all of them. It may sound like a lot of work, but when broken down into a plan, it is not.</p>
+									<p>One possible plan may look like this: Traffic Exchanges-1 hour per day. Post 15 classified ads per day. Make 5 posts to a message board or forum per day. Submit an article once per week to an ezine. Visit chat rooms and distribute flyers as you have extra time during the week. This all can be accomplished by spending 2-3 hours per day. You will be surprised how much you get done when you have a plan. You may also choose whether you will work 5 or 6 days per week. Make a checklist for each day of the week, and mark each task off as you finish it. That will keep you on focus, and will make you feel good that you are one step closer to reaching your goal.</p>
+									<p>Make a commitment to your new plan and don’t get involved in any other programs until your current programs are making you money consistently. Don’t give up. Sticking with this plan will significantly improve your success. Remember, Advertise, Advertise, Advertise.</p>
+								</div>
+							</div>
+							<div class="interiors__btn">
+								<button class="btn btn_blue btn_md">Перейти к номеру</button>
+							</div>
 						</div>
 					</div>
 				</div>
 			{% endfor %}
 		</div>
-		<div class="interiors__thumbnails js-interiors-thumbnails">
-			{% for item in range(0,20) %}
-				<div class="interiors__thumbnail">
-					<div class="interiors__preview" style="background-image: url(img/interiors.jpg);" data-index="{{loop.index}}"></div>
-				</div>
-			{% endfor %}
+		<div class="interiors__thumbnails js-scroll-wrap js-interiors-thumbnails">
+			<div class="interiors__thumbnails-in">
+				{% for item in range(0,20) %}
+					<div class="interiors__thumbnail" data-index="{{loop.index}}">
+						<div class="interiors__preview" style="background-image: url(img/interiors.jpg);"></div>
+					</div>
+				{% endfor %}
+			</div>
 		</div>
 	</div>
 
