--- a/src/sass/components/_directions.sass
+++ b/src/sass/components/_directions.sass
@@ -5,6 +5,9 @@
 	&__input
 	&__btn
 .input
-	
+	position: relative
 	input
+		height: 70px
+		border-radius: 5px
+		background-color: $wildSand
 .label
