--- a/src/sass/components/_cover.sass
+++ b/src/sass/components/_cover.sass
@@ -14,6 +14,16 @@
 		font-family: $book
 		+f(25px, 400, 1.2)
 		text-align: center
+		.services__cover &
+			+xl
+				padding: 25px 60px
+				max-width: 500px
+			+lg
+				padding: 25px 50px
+				max-width: 400px
+				font-size: 20px
+			+sm
+				display: none
 		+sm 
 			padding: 36px 47px
 			margin: 0
