--- a/src/sass/components/_items.sass
+++ b/src/sass/components/_items.sass
@@ -146,6 +146,9 @@
 			border-radius: 5px
 			width: 182px
 			height: 111px
+			background-position: 50% 50%
+			background-repeat: no-repeat 
+			background-size: cover
 	&__description
 		overflow: auto
 		margin-bottom: 19px
