--- a/src/templates/choice.html
+++ b/src/templates/choice.html
@@ -15,18 +15,18 @@ title: Choice
 			] %}
 				<div class="items__col">
 					<div class="item js-item">
-						<div class="item__img" style="background-image: url(https://placecage.com/1600/900);"></div>
+						<div class="item__img" style="background-image: url(./img/choice-1.jpg);"></div>
 						<div class="item__container">
 							<button class="item__control js-item-control">
 								<span></span>
 							</button>
 							<div class="item__title">{{item.title}}</div>
 							<div class="item__content js-item-content gray-scrollbar js-scroll-wrap">
-								<div class="item__slider white-scrollbar js-scroll-wrap">
+								<div class="item__slider white-scrollbar gray-scrollbar js-scroll-wrap">
 									<div class="item__slider-in">
 										{% for item in range(0,5) %}
 											<div class="item__slide js-item-slide">
-												<div class="item__slide-in" style="background-image: url(https://placecage.com/182/111);"></div>
+												<div class="item__slide-in" style="background-image: url(./img/apartment-photo-1.png);"></div>
 											</div>
 										{% endfor %}
 									</div>
