--- a/src/sass/helpers/_reset.sass
+++ b/src/sass/helpers/_reset.sass
@@ -43,6 +43,9 @@ table
     width: 100%
 html
     box-sizing: border-box
+html,
+body
+    height: 100%
 *, *:before, *:after
     box-sizing: inherit
 
