--- a/src/templates/location-route.html
+++ b/src/templates/location-route.html
@@ -7,8 +7,12 @@ title: Location route
 	
 	<!-- begin location -->
 	<div class="location">
-		<div class="location__wrap js-scroll-wrap">
-			<div class="location__hero">
+		<div class="location__map">
+			<div class="map js-map" data-center-lat="55.753678" data-center-lng="37.621103"></div>
+		</div>
+		<div class="location__wrap">
+			<div class="topic">
+				<h2 class="topic__title-lg title-lg">Расположение</h2>
 				<form action="/">
 					<!-- begin directions -->
 					<div class="directions">
@@ -16,28 +20,28 @@ title: Location route
 							<div class="directions__field">
 								<div class="directions__icon">{{ mixins.icon('circle') }}</div>
 								<div class="directions__input input js-input">
+									<input type="text" id="location" value="Аэропорт Шереметьево">
 									<label for="location" class="label">Откуда</label>
-									<input type="text" id="location">
 								</div>
 								<button class="directions__btn" type="button">{{ mixins.icon('location') }}</button>
 							</div>
 							<div class="directions__field">
 								<div class="directions__icon">{{ mixins.icon('marker') }}</div>
 								<div class="directions__input input js-input">
+									<input type="text" id="where" value="1-й Красногвардейский пр-д, 21, Москва, 123317">
 									<label for="where" class="label">Куда</label>
-									<input type="text" id="where">
 								</div>
 							</div>
 							<button class="directions__rotate" type="button">{{ mixins.icon('rotate') }}</button>
 						</div>
 					</div>
 					<!-- end directions -->
-					<div class="location__footer">
+					<div class="topic__footer">
 						<button class="btn btn_blue btn_md" type="submit">Проложить маршрут</button>
 					</div>
 				</form>
 			</div>
-			<div class="location__accordions">
+			<div class="accordions">
 				{% for accordion in [
 					{
 						title: 'Культурные объекты',
@@ -199,9 +203,6 @@ title: Location route
 				<!-- end accordion -->
 				{% endfor %}
 			</div>
-		</div>
-		<div class="location__map">
-			<div class="map js-map" data-center-lat="55.753678" data-center-lng="37.621103"></div>
 		</div>
 	</div>
 	<!-- end location -->
