--- a/src/sass/components/_apartment.sass
+++ b/src/sass/components/_apartment.sass
@@ -2,7 +2,7 @@
 	position: relative
 	color: $white 
 	min-height: 100vh
-	background-color: $darckBg 
+	background-color: #0E0A1C 
 	+md
 		text-align: center
 	&__wrap
