--- a/src/sass/components/_location.sass
+++ b/src/sass/components/_location.sass
@@ -57,7 +57,7 @@
 			padding: 18px 36px
 			margin-bottom: 10px
 	+sm
-		padding: 18px 10px 18px 45px
+		padding: 18px 45px 18px
 		text-align: center
 		line-height: 1.33
 	&__title-lg
