--- a/src/sass/components/_items.sass
+++ b/src/sass/components/_items.sass
@@ -160,6 +160,8 @@
 			height: 3em * 1.35
 			+f(15px, null, 1.35)
 			text-align: center
+		+sm
+			display: none
 		> .ps__rail-y
 			right: 0 !important
 	&__price
