--- a/src/sass/components/_location.sass
+++ b/src/sass/components/_location.sass
@@ -45,7 +45,7 @@
 			min-height: calc(100vh - 50px)  
 		+sm
 			float: none
-			height: auto
+			min-height: 0
 			width: 100%
 .topic
 	margin-bottom: 20px
