--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -52,7 +52,7 @@
 			overflow: auto
 			height: 100%
 	&__order
-		padding: 40px 47px
+		padding: 2vh 47px
 		border-top: 1px solid rgba($white, 0.2)
 		+lg 
 			padding: 20px 8px
@@ -203,7 +203,7 @@
 	&__link
 		position: relative
 		display: block
-		padding: 20px
+		padding: 2vh 20px
 		color: $white
 		opacity: 0.44
 		+f(16px, null, 1)
@@ -235,7 +235,7 @@
 				transition: opacity 0.3s, transform 0.3s
 	&__footer
 		display: block
-		padding: 20px 40px
+		padding: 2vh 40px
 		color: $blue
 		+f(16px, null, 1.5)
 		+lg 
