--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -52,7 +52,7 @@
 			overflow: auto
 			height: 100%
 	&__order
-		padding: 2vh 47px
+		padding: 3vh 47px
 		border-top: 1px solid rgba($white, 0.2)
 		+lg 
 			padding: 20px 8px
@@ -60,7 +60,7 @@
 			border-bottom: 1px solid rgba($white, 0.2)
 			max-width: 137px
 	&__contacts
-		padding-bottom: 20px
+		padding-bottom: 2vh
 		+f(16px, null, 1)
 		+lg 
 			padding: 37px 20px 25px
@@ -77,7 +77,7 @@
 			+hover 
 				color: $blue
 	&__address
-		padding: 0 30px 30px
+		padding: 0 30px 3vh
 		+f(16px, null, 1.375)
 		+lg 
 			padding: 0 20px 25px
@@ -85,7 +85,7 @@
 			max-width: 203px
 			+f(13px, null, 1.385)
 	&__copyright
-		padding: 0 25px 30px
+		padding: 0 25px 3vh
 		color: #9393A5
 		+f(14px, null, 1.286)
 		+lg
@@ -156,7 +156,7 @@
 
 .logo 
 	display: block
-	padding: 31px 62px
+	padding: 3vh 62px
 	+lg 
 		padding: 11px 40px
 		margin: 0 auto
@@ -197,13 +197,13 @@
 			opacity: 1
 
 .nav
-	padding: 20px 0
+	padding: 1.5vh 0
 	+lg 
 		padding: 17px 0 10px
 	&__link
 		position: relative
 		display: block
-		padding: 2vh 20px
+		padding: 1.5vh 20px
 		color: $white
 		opacity: 0.44
 		+f(16px, null, 1)
@@ -235,7 +235,7 @@
 				transition: opacity 0.3s, transform 0.3s
 	&__footer
 		display: block
-		padding: 2vh 40px
+		padding: 1.5vh 40px 2vh
 		color: $blue
 		+f(16px, null, 1.5)
 		+lg 
